fix: comprehensive CORS multi-layered defense for production